--- a/public/css/app.css
+++ b/public/css/app.css
@@ -667,9 +667,6 @@ select {
 .right-3 {
   right: 0.75rem;
 }
-.left-5 {
-  left: 1.25rem;
-}
 .left-0 {
   left: 0px;
 }
@@ -687,6 +684,9 @@ select {
 }
 .z-50 {
   z-index: 50;
+}
+.z-40 {
+  z-index: 40;
 }
 .m-3 {
   margin: 0.75rem;
